--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.data.redis.port=6379
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=emallspace-group
+
+# Actuator Endpoints
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.metrics.tags.application=emallspace
